--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="title_activity_job_details">JobDetails</string>
     <string name="title_activity_multi_spinner__vendor__category">MultiSpinner_Vendor_Category
     </string>
+    <string name="title_activity_home_screen_vendor">HomeScreen_vendor</string>
 </resources>
