--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="title_activity_discount_details__user">DiscountDetails_User</string>
     <string name="title_activity_discount_details__vendor">DiscountDetails_Vendor</string>
     <string name="title_activity_add_jobs__vendor">AddJobs_Vendor</string>
+    <string name="title_activity_multi_spinner__vendor__job_type">MultiSpinner_Vendor_JobType
+    </string>
+    <string name="title_activity_multi_spinner__vendor__job_field">MultiSpinner_Vendor_JobField
+    </string>
+    <string name="title_activity_job_details__vendor">JobDetails_Vendor</string>
 </resources>
