--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="title_activity_job_details__vendor">JobDetails_Vendor</string>
     <string name="title_activity_settings__help">Settings_HelpActivity</string>
     <string name="title_activity_settings__profile__vendor">Settings_ProfileActivity_Vendor</string>
+    <string name="title_activity_discount__edit__vendor">Discount_Edit_Vendor</string>
 </resources>
