--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="msg">please enable all permissions</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="discount">Discount</string>
@@ -42,4 +42,7 @@
     <string name="title_activity_discount__edit__vendor">Discount_Edit_Vendor</string>
     <string name="title_activity_job__edit__vendor">Job_Edit_Vendor</string>
     <string name="title_activity_add_events__vendor">AddEvents_Vendor</string>
+    <string name="title_activity_events__display">Events_Display</string>
+    <string name="title_activity_events__display__vendor">Events_Display_Vendor</string>
+    <string name="title_activity_event_details__vendor">EventDetails_Vendor</string>
 </resources>
