--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,9 @@
     <string name="title_activity_events__display">Events_Display</string>
     <string name="title_activity_events__display__vendor">Events_Display_Vendor</string>
     <string name="title_activity_event_details__vendor">EventDetails_Vendor</string>
+    <string name="title_activity_event_details__user">EventDetails_User</string>
+    <string name="title_activity_add_events__user">AddEvents_User</string>
+    <string name="title_activity_news__display">News_Display</string>
+    <string name="title_activity_news_details__user">NewsDetails_User</string>
+    <string name="title_activity_dashboard_details">DashboardDetails</string>
 </resources>
